skillswap_community/react_server.log

> react-kavia@0.1.0 start
> react-scripts start

(node:2066) [DEP_WEBPACK_DEV_SERVER_ON_AFTER_SETUP_MIDDLEWARE] DeprecationWarning: 'onAfterSetupMiddleware' option is deprecated. Please use the 'setupMiddlewares' option.
(Use `node --trace-deprecation ...` to show where the warning was created)
(node:2066) [DEP_WEBPACK_DEV_SERVER_ON_BEFORE_SETUP_MIDDLEWARE] DeprecationWarning: 'onBeforeSetupMiddleware' option is deprecated. Please use the 'setupMiddlewares' option.
Starting the development server...

Compiled successfully!

You can now view react-kavia in the browser.

  Local:            http://localhost:3000
  On Your Network:  http://172.17.0.2:3000

Note that the development build is not optimized.
To create a production build, use npm run build.

webpack compiled successfully
Compiling...
Failed to compile.

[eslint] 
src/App.js
Syntax error: Missing semicolon. (43:4) (43:4)
ERROR in ./src/App.js
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: /home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/src/App.js: Missing semicolon. (43:4)

  41 | }
  42 |
> 43 | Move on to fixing or adding other auth-related workflows (like 'Forgot Password' or 'Sign Up')?export default App;
     |     ^
  44 |
    at constructor (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:360:19)
    at FlowParserMixin.raise (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:3327:19)
    at FlowParserMixin.semicolon (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:3653:10)
    at FlowParserMixin.parseExpressionStatement (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:12929:10)
    at FlowParserMixin.parseExpressionStatement (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:5162:18)
    at FlowParserMixin.parseStatementContent (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:12543:19)
    at FlowParserMixin.parseStatementLike (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:12406:17)
    at FlowParserMixin.parseStatementLike (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:5140:24)
    at FlowParserMixin.parseModuleItem (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:12383:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:12960:36)
    at FlowParserMixin.parseBlockBody (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:12953:10)
    at FlowParserMixin.parseProgram (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:12280:10)
    at FlowParserMixin.parseTopLevel (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:12270:25)
    at FlowParserMixin.parseTopLevel (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:5909:28)
    at FlowParserMixin.parse (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:14120:10)
    at parse (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/parser/lib/index.js:14154:38)
    at parser (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at step (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/gensync/index.js:261:32)
    at /home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/gensync/index.js:223:11)
    at /home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/gensync/index.js:189:28
    at /home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/@babel/core/lib/gensync-utils/async.js:67:7
    at /home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/gensync/index.js:113:33
    at step (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/gensync/index.js:287:14)
    at /home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/gensync/index.js:273:13
    at async.call.result.err.err (/home/kavia/workspace/code-generation/skillswap-community-5463-5470/skillswap_community/node_modules/gensync/index.js:223:11)

ERROR in [eslint] 
src/App.js
  Line 43:4:  Parsing error: Missing semicolon. (43:4)

webpack compiled with 2 errors
Compiling...
Compiled successfully!
webpack compiled successfully
Compiling...
Compiled successfully!
webpack compiled successfully
